--- a/Formulaire/index.html
+++ b/Formulaire/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="contact-clean">
-        <form method="post" action="traitement.php">
+        <form method="post" action="traitement.php" onsubmit="return verifierFormulaire(event)">
             <h2 class="text-center">sign up&nbsp;&nbsp;</h2>
             <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div>
             <div class="form-group"><input class="form-control" type="text" name="prénom" placeholder="First name"></div>
@@ -26,7 +26,7 @@
                   <input class="form-check-input" type="checkbox" id="formCheck-1">
                     <label class="form-check-label" for="formCheck-1">I am of age</label>
                 </div>
-                <button class="btn btn-primary" type="submit" onclick="verifierFormulaire(event)">Send</button>
+                <button class="btn btn-primary" type="submit">Send</button>
             </div>
         </form>
     </div>
